enhancement of home page :font ,nav , card style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>मातृबोधः</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Protest+Riot&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="animations.css" />
     <link rel="stylesheet" href="scontentcss.css" />
@@ -39,9 +42,10 @@
                         <li><a href="feedback.html">Feedback</a></li>
                     </ul>
                 </li>
+
                 <li><a href="login.html">Login</a></li>
                 
-            <a href="#" class="btn-contact">Contact</a>
+            <a href="#" class="btn-contact" id="btn-contact">Contact</a>
            </ul>
         </nav>
     </header>
@@ -102,7 +106,7 @@
           <p class="subtitle ">
             A Chariot of Indian Children with Ancient Wisdom for Modern Times
           </p>
-          <a href="#" class="btn btn-primary">View Services</a>
+          <a href="#" class="btn btn-primary" style="border-color: #e5a186">View Services</a>
         </div>
       </div>
 
@@ -191,6 +195,7 @@
         <img src="/1.jpg" alt="Krishna and Arjuna on chariot" />
       </div>
     </section>
+
     <section class="content-section" id="content">
       <!-- Roadmap Cards -->
       <div class="roadmap">
